--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 causal_conv1d==1.4.0
-einops==0.4.1
+dgl==2.4.0+cu118
+einops==0.8.0
 mamba_ssm==2.2.2
-numpy==1.19.5
-pandas==1.1.5
-scikit_learn==1.5.1
-scipy==1.5.4
+numpy==1.24.4
+pandas==1.5.3
+scikit_learn==1.2.2
 tensorboardX==2.6.2.2
-torch==1.10.2
+torch==2.1.1+cu118
